--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "devDependencies": {
     "cypress": "^10.1.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.7.3"
   }
 }
